<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AvidMedia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="capital_cancel">CANCEL</string>
    <string name="location_services_not_enabled_msg">Your Location Services are not enabled.Please enable them.</string>
    <string name="ok">OK</string>

    <!-- filter screen -->
    <string name="filter_location_label">Location</string>
    <string name="filter_age_label">Age</string>
    <string name="filter_range_label">Range</string>
    <string name="filter_hide_inactive_user_label">Hide Inactive Users</string>
    <string name="filter_hide_location_label">Hide Locations</string>
    <string name="filter_up_for_label">Up for&#8230;</string>
    <string name="filter_orientation_label">Orientation</string>
    <string name="filter_body_type_label">Body Type</string>
    <string name="filter_temperament_label">Temperament</string>
    <string name="filter_size_label">Size</string>
    <string name="filter_hiv_status_label">HIV Status</string>
    <string name="filter_height_label">Height</string>
    <string name="filter_drink_label">Drink</string>
    <string name="filter_eye_color_label">Eye Color</string>
    <string name="filter_role_label">Role</string>
    <string name="filter_persona_label">Persona</string>
    <string name="filter_body_hair_label">Body hair</string>
    <string name="filter_cut_label">Cut</string>
    <string name="filter_ethnicity_label">Ethnicity</string>
    <string name="filter_out_to_label">Out To</string>
    <string name="filter_smoke_label">Smoke</string>
    <string name="filter_hair_color_label">Hair color</string>
    <string name="fragment_app_version_details">Version: XX</string>

    <!-- Confirmation Screens -->
    <string name="confirm_favorite_text">Mark As Favorite?</string>
    <string name="confirm_wink_text">Send Wink?</string>
    <string name="confirm_flame_toggle_text">Feeeling Hott!!</string>
    <string name="confirm_friend_text">Mark As Friend?</string>
    <string name="confirm_delete_text">Are you sure you\nwant to delete?</string>
    <string name="confirm_friend_tip_text">Marking someone as friend\nwill automatically <b>hide your\nprofile details</b> from them</string>
    <string name="dont_prompt_anymore_text">Don\'t Prompt \nAnymore</string>

    <!-- Splash Screen Options text -->
    <string name="i_am_new_text">I\'m new, let me in!</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="i_have_a_claim_code">I have a claim code</string>

    <!-- Wink Dummy data -->
    <string name="wink_user_name">Shane Williums</string>
    <string name="wink_user_header">Here is the headline! Users can write a short message here</string>
    <string name="accept_txt">ACCEPT</string>
    <string name="decline_txt">DECLINE</string>
    <string name="terms_and_condition_url">http://wecamchat.com/tos.html</string>

    <!-- Profile Screen -->
    <string name="text_not_specified">Not Specified</string>
    <string name="profile_dob_txt">Date of Birth</string>

    <!-- account retrieval screen -->
    <string name="acc_retrieval_mobile_number">Mobile Number</string>
    <string name="acc_retrieval_email">Email Address</string>
   	 <string name="acc_retrieval_claim_code">Claim Code</string>
   
    
    <string name="acc_retrieval_or">OR</string>

    <!-- sms verification screen -->

    <string name="sms_verification_text">We just sent you an SMS\n text message containing a\n verification code.Please\n enter that code here</string>
    <string name="verification_code_label">Verification Code</string>

    <!-- create profile screen -->
    <string name="create_profile_heading">Create Profile</string>
    <string name="create_profile_desc">Add a photo or video and\nenter your name to continue.</string>
    <string name="create_profile_whats_name_txt">What is your name?</string>
    
    <!-- passcode dialog -->
    
    <string name="passcode_label_text">Enter New Passcode</string>

    <string-array name="CountryCodes">
        <item>93,AF</item>
        <item>355,AL</item>
        <item>213,DZ</item>
        <item>376,AD</item>
        <item>244,AO</item>
        <item>672,AQ</item>
        <item>54,AR</item>
        <item>374,AM</item>
        <item>297,AW</item>
        <item>61,AU</item>
        <item>43,AT</item>
        <item>994,AZ</item>
        <item>973,BH</item>
        <item>880,BD</item>
        <item>375,BY</item>
        <item>32,BE</item>
        <item>501,BZ</item>
        <item>229,BJ</item>
        <item>975,BT</item>
        <item>591,BO</item>
        <item>387,BA</item>
        <item>267,BW</item>
        <item>55,BR</item>
        <item>673,BN</item>
        <item>359,BG</item>
        <item>226,BF</item>
        <item>95,MM</item>
        <item>257,BI</item>
        <item>855,KH</item>
        <item>237,CM</item>
        <item>1,CA</item>
        <item>238,CV</item>
        <item>236,CF</item>
        <item>235,TD</item>
        <item>56,CL</item>
        <item>86,CN</item>
        <item>61,CX</item>
        <item>61,CC</item>
        <item>57,CO</item>
        <item>269,KM</item>
        <item>242,CG</item>
        <item>243,CD</item>
        <item>682,CK</item>
        <item>506,CR</item>
        <item>385,HR</item>
        <item>53,CU</item>
        <item>357,CY</item>
        <item>420,CZ</item>
        <item>45,DK</item>
        <item>253,DJ</item>
        <item>670,TL</item>
        <item>593,EC</item>
        <item>20,EG</item>
        <item>503,SV</item>
        <item>240,GQ</item>
        <item>291,ER</item>
        <item>372,EE</item>
        <item>251,ET</item>
        <item>500,FK</item>
        <item>298,FO</item>
        <item>679,FJ</item>
        <item>358,FI</item>
        <item>33,FR</item>
        <item>689,PF</item>
        <item>241,GA</item>
        <item>220,GM</item>
        <item>995,GE</item>
        <item>49,DE</item>
        <item>233,GH</item>
        <item>350,GI</item>
        <item>30,GR</item>
        <item>299,GL</item>
        <item>502,GT</item>
        <item>224,GN</item>
        <item>245,GW</item>
        <item>592,GY</item>
        <item>509,HT</item>
        <item>504,HN</item>
        <item>852,HK</item>
        <item>36,HU</item>
        <item>91,IN</item>
        <item>62,ID</item>
        <item>98,IR</item>
        <item>964,IQ</item>
        <item>353,IE</item>
        <item>44,IM</item>
        <item>972,IL</item>
        <item>39,IT</item>
        <item>225,CI</item>
        <item>81,JP</item>
        <item>962,JO</item>
        <item>7,KZ</item>
        <item>254,KE</item>
        <item>686,KI</item>
        <item>965,KW</item>
        <item>996,KG</item>
        <item>856,LA</item>
        <item>371,LV</item>
        <item>961,LB</item>
        <item>266,LS</item>
        <item>231,LR</item>
        <item>218,LY</item>
        <item>423,LI</item>
        <item>370,LT</item>
        <item>352,LU</item>
        <item>853,MO</item>
        <item>389,MK</item>
        <item>261,MG</item>
        <item>265,MW</item>
        <item>60,MY</item>
        <item>960,MV</item>
        <item>223,ML</item>
        <item>356,MT</item>
        <item>692,MH</item>
        <item>222,MR</item>
        <item>230,MU</item>
        <item>262,YT</item>
        <item>52,MX</item>
        <item>691,FM</item>
        <item>373,MD</item>
        <item>377,MC</item>
        <item>976,MN</item>
        <item>382,ME</item>
        <item>212,MA</item>
        <item>258,MZ</item>
        <item>264,NA</item>
        <item>674,NR</item>
        <item>977,NP</item>
        <item>31,NL</item>
        <item>599,AN</item>
        <item>687,NC</item>
        <item>64,NZ</item>
        <item>505,NI</item>
        <item>227,NE</item>
        <item>234,NG</item>
        <item>683,NU</item>
        <item>850,KP</item>
        <item>47,NO</item>
        <item>968,OM</item>
        <item>92,PK</item>
        <item>680,PW</item>
        <item>507,PA</item>
        <item>675,PG</item>
        <item>595,PY</item>
        <item>51,PE</item>
        <item>63,PH</item>
        <item>870,PN</item>
        <item>48,PL</item>
        <item>351,PT</item>
        <item>1,PR</item>
        <item>974,QA</item>
        <item>40,RO</item>
        <item>7,RU</item>
        <item>250,RW</item>
        <item>590,BL</item>
        <item>685,WS</item>
        <item>378,SM</item>
        <item>239,ST</item>
        <item>966,SA</item>
        <item>221,SN</item>
        <item>381,RS</item>
        <item>248,SC</item>
        <item>232,SL</item>
        <item>65,SG</item>
        <item>421,SK</item>
        <item>386,SI</item>
        <item>677,SB</item>
        <item>252,SO</item>
        <item>27,ZA</item>
        <item>82,KR</item>
        <item>34,ES</item>
        <item>94,LK</item>
        <item>290,SH</item>
        <item>508,PM</item>
        <item>249,SD</item>
        <item>597,SR</item>
        <item>268,SZ</item>
        <item>46,SE</item>
        <item>41,CH</item>
        <item>963,SY</item>
        <item>886,TW</item>
        <item>992,TJ</item>
        <item>255,TZ</item>
        <item>66,TH</item>
        <item>228,TG</item>
        <item>690,TK</item>
        <item>676,TO</item>
        <item>216,TN</item>
        <item>90,TR</item>
        <item>993,TM</item>
        <item>688,TV</item>
        <item>971,AE</item>
        <item>256,UG</item>
        <item>44,GB</item>
        <item>380,UA</item>
        <item>598,UY</item>
        <item>1,US</item>
        <item>998,UZ</item>
        <item>678,VU</item>
        <item>39,VA</item>
        <item>58,VE</item>
        <item>84,VN</item>
        <item>681,WF</item>
        <item>967,YE</item>
        <item>260,ZM</item>
        <item>263,ZW</item>
    </string-array>

</resources>