<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/fill_parent"
    android:background="@color/translucent"
    android:fillViewport="true" >

    <RelativeLayout
        style="@style/match_parent"
        android:layout_gravity="center" >

        <LinearLayout
            android:id="@+id/fragment_create_profile_center_layout"
            style="@style/wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:background="@drawable/create_a_profile_bg"
            android:gravity="center"
            android:orientation="vertical" >

            <com.wecamchat.aviddev.util.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_profile_heading"
                android:textColor="@android:color/white"
                android:textSize="@dimen/create_profile_heading_size"
                app:ctypeface="GlyphaLTStd-Bold.otf" />

            <com.wecamchat.aviddev.util.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="@dimen/large_padding"
                android:text="@string/create_profile_desc"
                android:textColor="@android:color/white"
                android:textSize="@dimen/acc_retrieval_text_size"
                app:ctypeface="GlyphaLTStd.otf" />

            <ImageView
                android:id="@+id/fragment_create_profile_cam_imageView"
                android:layout_width="@dimen/create_profile_image_size"
                android:layout_height="@dimen/create_profile_image_size"
                android:layout_marginTop="@dimen/xlarge_padding"
                android:src="@drawable/profile_cam_ic" />

            <com.wecamchat.aviddev.util.view.CustomTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge_padding"
                android:text="@string/create_profile_whats_name_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/acc_retrieval_lable_size"
                app:ctypeface="GlyphaLTStd-Bold.otf" />

            <EditText
                android:id="@+id/fragment_create_profile_name_editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_padding"
                android:background="@drawable/create_a_profile_input"
                android:gravity="center"
                android:hint=""
                android:imeOptions="actionDone"
                android:inputType="textCapWords"
                android:maxLength="22"
                android:singleLine="true"
                android:textColor="@color/acc_retrieval_text_color"
                android:textSize="@dimen/create_profile_editText_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/fragment_create_profile_center_layout"
            android:layout_below="@id/fragment_create_profile_center_layout"
            android:layout_marginTop="@dimen/large_padding"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/fragment_create_profile_no_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/account_retrieval_cross_ic" />

            <ImageView
                android:id="@+id/fragment_create_profile_yes_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/medium_padding"
                android:background="@drawable/account_retrieval_tick_ic" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>